--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -63,7 +63,7 @@
           </a>
 
         <br><br><br><br><br><br>
-        <h1 class="text-light"> Digital Clock</h1>
+        <h1 class="text-light"> Hostel Allotment App</h1>
         </div>
       </div>
 
@@ -78,7 +78,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
@@ -155,7 +155,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>2022 -- Sidhu</span></strong>
+        <!-- &copy; Copyright <strong><span>2022 -- Sidhu</span></strong> -->
       </div>
       <div class="credits">
         Designed by Puneet Sidhu
