--- a/portfolio-details_web1.html
+++ b/portfolio-details_web1.html
@@ -78,10 +78,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfolio Details</li>
           </ol>
         </div>
 
@@ -136,7 +136,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>2022 -- Sidhu</span></strong>
+        <!-- &copy; Copyright <strong><span>2022 -- Sidhu</span></strong> -->
       </div>
       <div class="credits">
         Designed by Puneet Sidhu
